
[tool.poetry]
name = "eseas"
version = "0.1.0"
description = "eseas"
authors = ["Sermet Pekin <Sermet.Pekin@gmail.com>"]
license = "MIT"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"
evdspy =">=1.1.25"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"