[project]
name = "eseas"
version = "0.1.10"
description = """ESEAS is a Python package that serves as a wrapper for the jwsacruncher Java package.
This tool allows users to process Demetra workspace XML files, create batch files, execute them,
and collect the desired outputs into individual Excel files."""
authors = [{ name = "Sermet Pekin", email = "Sermet.Pekin@gmail.com" }]
license = { text = "EUPL-1.2" }
readme = "README.md"
keywords = ["seasonal adjustment", "data processing", "jwsacruncher", "Demetra"]
requires-python = ">=3.9"
dependencies = [
    "evdspy>=1.1.41",
    "urllib3>=2.3.0",
]

[project.urls]
repository = "https://github.com/SermetPekin/eseas-repo"
documentation = "https://github.com/SermetPekin/eseas-repo#readme"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "tox>=4.24.1",
]


[tool.setuptools.packages]
find = { where = ["."] }



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
